[gd_scene load_steps=7 format=3 uid="uid://k85xxf5tmtr1"]

[ext_resource type="Script" path="res://scenes/CharacterBody2D.gd" id="1_v87tb"]
[ext_resource type="Texture2D" uid="uid://b7cde7go58hr4" path="res://Wheel_with_jackpot.png" id="2_fc7u4"]
[ext_resource type="Texture2D" uid="uid://b0r7vup4ggj3q" path="res://Short_left_arrow_-_red.png" id="3_000af"]
[ext_resource type="AudioStream" uid="uid://cr84kn2cbq2tu" path="res://BASIC_WIN.wav" id="3_lf0hj"]
[ext_resource type="AudioStream" uid="uid://b16ioktepwdsi" path="res://JACKPOT.mp3" id="4_nww2i"]
[ext_resource type="Texture2D" uid="uid://caucg6hp24uej" path="res://gambling-background-8752118.webp" id="6_wnikv"]

[node name="Wheel" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("1_v87tb")

[node name="Wheel" type="Sprite2D" parent="CharacterBody2D"]
position = Vector2(595, 322)
scale = Vector2(1.32911, 1.32911)
texture = ExtResource("2_fc7u4")
centered = false
offset = Vector2(-731.18, -596.98)

[node name="Label" type="Label" parent="CharacterBody2D"]
offset_left = 24.0
offset_top = -141.0
offset_right = 953.0
offset_bottom = 4.0
theme_override_font_sizes/font_size = 68

[node name="ResetButton" type="Button" parent="CharacterBody2D"]
offset_left = 994.0
offset_top = -12.0
offset_right = 1200.0
offset_bottom = 127.0
focus_mode = 0
text = "Reset
"

[node name="SpinButton" type="Button" parent="CharacterBody2D"]
offset_left = -70.0
offset_top = 16.0
offset_right = 188.0
offset_bottom = 152.0
text = "Spin"

[node name="SumLabel" type="Label" parent="CharacterBody2D"]
offset_left = 1085.0
offset_top = 365.0
offset_right = 1320.0
offset_bottom = 507.0
theme_override_font_sizes/font_size = 35

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CharacterBody2D"]
stream = ExtResource("3_lf0hj")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="CharacterBody2D"]
stream = ExtResource("4_nww2i")

[node name="BackButton" type="Button" parent="CharacterBody2D"]
offset_left = 1074.0
offset_top = 513.0
offset_right = 1253.0
offset_bottom = 661.0
text = "Back to Menu"

[node name="Arrow" type="Sprite2D" parent="."]
position = Vector2(1112.46, 324.2)
scale = Vector2(0.161182, 0.159236)
texture = ExtResource("3_000af")

[node name="Background" type="Sprite2D" parent="."]
z_index = -4096
position = Vector2(731.08, 358.75)
scale = Vector2(3.54252, 3.06565)
texture = ExtResource("6_wnikv")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(578, 324)
zoom = Vector2(0.6, 0.6)

[connection signal="pressed" from="CharacterBody2D/ResetButton" to="CharacterBody2D" method="_on_reset_button_pressed"]
[connection signal="pressed" from="CharacterBody2D/SpinButton" to="CharacterBody2D" method="_on_spin_button_pressed"]
[connection signal="pressed" from="CharacterBody2D/BackButton" to="CharacterBody2D" method="_on_back_button_pressed"]
